cmake_minimum_required(VERSION 3.17)
project(c_tasks C)

set(CMAKE_C_STANDARD 99)

add_executable(math-01-0 math-01-0.c)
add_executable(math-01-1 math-01-1.c)
add_executable(math-01-2 math-01-2.c)
add_executable(math-01-3 math-01-3.c)
add_executable(math-01-4 math-01-4.c)
add_executable(math-01-5 math-01-5.c)
add_executable(test test.c)
